deploy/kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: devops-assistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: devops-assistant
  template:
    metadata:
      labels:
        app: devops-assistant
    spec:
      containers:
      - name: devops-assistant
        image: crarchitekt001mpsvcr.azurecr.io/devops-assistant:002
        resources:
          limits:
            cpu: 500m
            memory: 200Mi
          requests:
            cpu: 100m
            memory: 100Mi
        ports:
        - containerPort: 7860
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 5
      imagePullSecrets:
        - name: acr-docker
